--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,8 @@
 branch-defaults:
   default:
     environment: pff-dev
+  master:
+    environment: pff-dev
 global:
   application_name: work
   default_ec2_keyname: aws_key
